@@ -1,4 +1,4 @@
-DESKTOP NOTIFICATION: icon http://localhost/my_icon.png, title New E-mail, text Meet me tonight at 8!
+DESKTOP NOTIFICATION: icon , title New E-mail, text Meet me tonight at 8!
 DESKTOP NOTIFICATION CLOSED: New E-mail
 Sending notifications with permission...
 
