@@ -12,17 +12,17 @@
             if (window.layoutTestController) {
                 layoutTestController.grantDesktopNotificationPermission("file://");
                 layoutTestController.dumpAsText();
+                layoutTestController.waitUntilDone();
             }
 
             if (!window.webkitNotifications) {
                 log("FAIL: No webkitNotifications interface!");
             }
             
-            var N = window.webkitNotifications.createNotification("http://localhost/my_icon.png", "New E-mail", "Meet me tonight at 8!");
-            N.ondisplay = function() { log("PASS: display event invoked."); }
-            N.onclose = function() { log("PASS: close event invoked."); }
+            var N = window.webkitNotifications.createNotification("", "New E-mail", "Meet me tonight at 8!");
+            N.ondisplay = function() { log("PASS: display event invoked."); N.cancel(); }
+            N.onclose = function() { log("PASS: close event invoked."); layoutTestController.notifyDone(); }
             N.show();
-            N.cancel();
         }
     </script>
 </head>
